--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="page-wrapper">
       <header id="header">
-	    <a id="logo1" href="index.html"><img src="images/logo3.png" alt="ACME"></a>
+	    <a id="logo1" href="index.html"><img src="images/logo3.png" alt="Big red logo of the company ACME"></a>
 	    <h1>My Demo Site</h1>
 	    <a id="toplink" href="https://www.fileformat.info/info/unicode/char/2699/index.htm">&#9881;</a>
       </header>
@@ -30,7 +30,7 @@
       <main id="content-wrapper">
         <div id="main-content">
           <h2>This is our h2 Tag</h2>
-          <img class="imageR" src="images/main.png" alt="Main Squeeze">
+          <img class="imageR" src="images/main.png" alt="Logo of Main Squeeze Juice Co. with the an orange inside the bottom s swirl all under a circle over a white background.">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, perferendis, sed ab sequi molestias eum sint consectetur dicta praesentium ipsa repellat soluta placeat dolor! Accusantium impedit est explicabo harum aperiam!</p>
